# timeline

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  bookproject.tl  project_notes.txt  pyproject.toml  test.tl  test1.tl  timeline_colors.afdesign  timeline_colors.afdesign~lock~  tl_source1.tl  tl_source2.tl  tl_test1.tl
docs/: Makefile  conf.py  example.ipynb  make.bat
src/timeline/: __init__.py  graphics.py  parser.out  parsetab.py  svg_primitives.py  timeline.py  tllexer.py  tlobjects.py  tlparser.py  tlutils.py
tests/: test_timeline.py
