[tool.poetry]
name = "timeline"
version = "0.1.3.9003"
description = "A package to create timeline visuals"
authors = ["Rainer Strotmann"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
ply = "^3.11"
pathlib2 = "^2.3.7.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
timeline = "timeline.timeline:app"